# cmake-nRF5x

ci/examples/ble_peripheral/ble_app_blinky/: CMakeLists.txt
ci/libraries/: nrf5_app.json  nrf5_ble.json  nrf5_common.json  nrf5_log.json
cmake/: nrf5_groups.cmake
